[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Main menu.gd" type="Script" id=1]
[ext_resource path="res://sounds/selection.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/confirm_selection.wav" type="AudioStream" id=3]
[ext_resource path="res://images/menu/continue_hover.png" type="Texture" id=4]
[ext_resource path="res://images/gwj/GWJ-WC-2.png" type="Texture" id=6]
[ext_resource path="res://images/menu/exit.png" type="Texture" id=8]
[ext_resource path="res://images/menu/help.png" type="Texture" id=9]
[ext_resource path="res://images/menu/options.png" type="Texture" id=13]
[ext_resource path="res://images/menu/new_game.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "fade out"
length = 2.0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.705882, 0.552941, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -88.0
margin_bottom = -1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 322.0
margin_bottom = 189.0

[node name="WildCardMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 179.0
custom_constants/margin_top = 59

[node name="WildCard" type="TextureRect" parent="MarginContainer/HBoxContainer/WildCardMargin"]
margin_top = 59.0
margin_right = 88.0
margin_bottom = 179.0
texture = ExtResource( 6 )

[node name="MenuBtn" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 312.0
margin_bottom = 179.0
custom_constants/margin_top = 50
custom_constants/margin_left = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MenuBtn"]
margin_left = 120.0
margin_top = 50.0
margin_right = 220.0
margin_bottom = 179.0

[node name="Continue" type="TextureRect" parent="MarginContainer/HBoxContainer/MenuBtn/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
texture = ExtResource( 4 )

[node name="NewGame" type="TextureRect" parent="MarginContainer/HBoxContainer/MenuBtn/VBoxContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
texture = ExtResource( 17 )

[node name="Help" type="TextureRect" parent="MarginContainer/HBoxContainer/MenuBtn/VBoxContainer"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
texture = ExtResource( 9 )

[node name="Options" type="TextureRect" parent="MarginContainer/HBoxContainer/MenuBtn/VBoxContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
texture = ExtResource( 13 )

[node name="Exit" type="TextureRect" parent="MarginContainer/HBoxContainer/MenuBtn/VBoxContainer"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 116.0
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade out"
"anims/fade out" = SubResource( 1 )

[node name="Selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ConfirmSelection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
